test/scc_test/stmt/semantic-errors/020.t
void test()
{
    struct { int x; } a;
    do ; while(a);
}